# locomotif_dok

./: .gitignore  LICENSE  README.md  pyproject.toml
example_locomotif_dok/: ecg_example.ipynb
locomotif/: catalogue_of_constraints.py  locomotif.py  locomotif_dok.py  utils.py  visualize.py
locomotif/tools/: idle_segment_detection.py
