# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages    = ['locomotif']

[project]
name = "locomotif-dok"
version = "1.0"
description = "Discovering variable-length motif sets in multivariate time series using time warping"
readme = "README.md"
authors = [
    { name = "Aras Yurtman" },
    { name = "Daan Van Wesenbeeck" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["time series", "motif sets", "variable-length", "time warping", "multivariate", "domain knowledge", "constraints", "supervision"]
requires-python = ">=3.8"
dependencies = [
    'numba >= 0.30.0',
    'matplotlib >=3.0, < 4.0',
]
